Inserido conteúdo README

--- a/src/pages/html/clients.html
+++ b/src/pages/html/clients.html
@@ -21,7 +21,7 @@
     <!-- NOVO: Para estilos de body e layout principal -->
     <link rel="stylesheet" href="../css/navbar.css" />
     <!-- CSS da Navbar -->
-    <link rel="stylesheet" href="../css/clients_style.css" />
+    <link rel="stylesheet" href="../css/clients.css" />
     <!-- CSS específico da página de clientes -->
   </head>
   <body>
